<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="habits">Habits</string>
    <string name="track">Track</string>
    <string name="select_category">Select Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="add_category">Add Category</string>
    <string name="choose_goal">Choose Goal</string>
    <string name="enter_goal">Enter Goal</string>
    <string name="add">Add</string>
    <string name="choose_a_color">Choose a Color</string>
    <string name="reminder">Reminder</string>
    <string name="add_habit">Add Habit</string>
    <string name="add_track_goals">Add Track Goals</string>
    <string name="set_target">Set Target</string>
    <string name="add_goal">Add Goal</string>
    <string name="title"> e.g. Workout</string>
    <string name="description">Description</string>
    <string name="track_goal">Track Goal</string>
</resources>