<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/fg_back_arrow"
                app:title="Add Habit"
                app:titleTextAppearance="@style/ToolbarTitleStyle"
                android:background="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:padding="6dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="Title"
                android:textSize="16sp" />
            <!-- Title Input -->
            <EditText
                android:id="@+id/etGoalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:backgroundTint="@color/et_bg"
                android:background="@drawable/bg_tab_select"
                android:hint="@string/title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:padding="6dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="Description"
                android:textSize="16sp" />
            <!-- Description Input -->
            <EditText
                android:id="@+id/etGoalDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:backgroundTint="@color/et_bg"
                android:background="@drawable/bg_tab_select"
                android:hint="@string/description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_margin="10dp"
                android:padding="6dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="Repeat On"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayoutDays"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@drawable/day_unselected_background"
                android:orientation="horizontal"
                android:padding ="5dp"
                android:layout_marginHorizontal="10dp"
                android:weightSum="7">

                <TextView
                    android:id="@+id/tv_sunday"
                    style="@style/DayTextView"
                    android:tag="0"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="Sun" />

                <TextView
                    android:id="@+id/tv_monday"
                    style="@style/DayTextView"
                    android:tag="1"
                    android:text="Mon" />

                <TextView
                    android:id="@+id/tv_tuesday"
                    style="@style/DayTextView"
                    android:tag="2"
                    android:text="Tue" />

                <TextView
                    android:id="@+id/tv_wednesday"
                    style="@style/DayTextView"
                    android:tag="3"
                    android:text="Wed" />

                <TextView
                    android:id="@+id/tv_thursday"
                    style="@style/DayTextView"
                    android:tag="4"
                    android:text="Thu" />

                <TextView
                    android:id="@+id/tv_friday"
                    style="@style/DayTextView"
                    android:tag="5"
                    android:text="Fri" />

                <TextView
                    android:id="@+id/tv_saturday"
                    style="@style/DayTextView"
                    android:tag="6"
                    android:text="Sat"
                    android:layout_marginEnd="0dp"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/reminderSegment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/raleway_semi_bold"
                    android:padding="6dp"
                    android:text="@string/reminder"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSelectedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="6dp"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_reminder"
                    tools:text="12:34"
                    tools:visibility="visible" />

                <Switch
                    android:id="@+id/switchReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:checked="false"
                    android:paddingVertical="6dp"
                    android:scaleY="1.44"
                    android:thumb="@drawable/ic_switch_thumb"
                    android:track="@drawable/bg_track"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ic_dropDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:paddingVertical="6dp"
                    android:src="@drawable/ic_drop_down"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/switchReminder" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="20dp"
                android:timePickerMode="spinner"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Save Button at Bottom -->
    <TextView
        android:id="@+id/btnSaveGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tab_select"
        android:gravity="center"
        android:padding="12dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_margin="26dp"
        app:backgroundTint="@color/button_primary"
        android:text="Save"
        app:layout_anchor="@id/scrollView"
        app:layout_anchorGravity="bottom" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>